# GeoMetrics

./: README.md  pyproject.toml  pyproject.toml~
examples/: ex01_clausius.ipynb
examples/example_data/: PAFA.csv
geometrics/: __init__.py  geometrics_stylesheet.mplstyle  plot_tools.py  stats_calcs.py  utils.py
geometrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geometrics/plotting/: geometrics_stylesheet.mplstyle  plot_tools.py  test_sheet.py
