[tool.poetry]
name = "geometrics"
version = "0.1.0"
description = ""
authors = ["Lara Tobias-Tarsh <laratt@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
cartopy = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
