[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometrics"
version = "0.1.0"
description = "Data Analysis for Geosciences"
authors = [
  { name = "Lara Tobias-Tarsh, University of Michigan", email = "laratt@umich.edu" }
]
requires-python = ">=3.1"
dependencies = [
	"cartopy>=0.21.0",
	"matplotlib>=3.3.0",
	"numpy>=1.20.0",
	"scipy>= 1.10.1",
]

[tool.setuptools]
packages = ["geometrics"]

[tool.setuptools.package-data]
"geometrics" = ["*.mplstyle"]
